tests/errors/first_stage/.entry/extra_chars/extra_chars.as
; extra characters at the end of an entry instruction
stop: hlt
.entry stop a